# Rust-find-docx

./: .gitignore  Cargo.toml  README.md
src/: cr_docx.rs  cr_xlxs.rs  lib.rs  main.rs
tests/: cli.rs
tests/expected/: excel_open.txt  find_text.txt  hello.txt  no_found.txt  no_open.txt  walk_hello.txt
tests/input/: excel.xlsx  hello.docx  hello2.docx
tests/input/a/: hello3.docx
tests/input/a/b/: hello4.docx
