[package]
name = "rfd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotext = "0.1.1"
clap = "4.0.32"
walkdir = "2"
regex = "1"
colored = "2.0.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"